--- a/try1.fxml
+++ b/try1.fxml
@@ -9,29 +9,38 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <BorderPane prefHeight="75.0" >
+            <BorderPane prefHeight="75.0" style="-fx-background-color: BB2719;">
                <center>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" BorderPane.alignment="CENTER" />
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" textAlignment="CENTER" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
                </center>
                <left>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="10.0" />
                      </BorderPane.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
                   </Text>
                </left>
                <right>
                   <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@331website1/images/stat.jpg" />
+                        <Image url="@images/panda.png" />
                      </image>
                   </ImageView>
                </right>
@@ -44,54 +53,63 @@
                            <BorderPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </BorderPane.margin>
-                           <content>
-                              <ButtonBar buttonMinWidth="60.0">
-                                <buttons>
-                                  <Button contentDisplay="CENTER" mnemonicParsing="false">
-                                       <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@331website1/images/me.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
-                                       <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@331website1/images/me.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
-                                       <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@331website1/images/me.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
-                                       <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@331website1/images/me.png" />
-                                             </image>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                </buttons>
-                                 <padding>
-                                    <Insets left="100.0" right="100.0" />
-                                 </padding>
-                              </ButtonBar>
-                           </content>
                            <padding>
-                              <Insets bottom="20.0" left="10.0" right="10.0" top="24.0" />
+                              <Insets left="10.0" />
                            </padding>
+                           <content>
+                              <HBox alignment="CENTER" prefHeight="98.0" prefWidth="306.0">
+                                 <children>
+                                    <Button mnemonicParsing="false">
+                                       <HBox.margin>
+                                          <Insets right="30.0" />
+                                       </HBox.margin>
+                                       <graphic>
+                                          <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/ricewhite.PNG" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                    <Button mnemonicParsing="false">
+                                       <graphic>
+                                          <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/ricefried.PNG" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <HBox.margin>
+                                          <Insets right="30.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                    <Button mnemonicParsing="false">
+                                       <graphic>
+                                          <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/chowmein.PNG" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <HBox.margin>
+                                          <Insets right="30.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                    <Button mnemonicParsing="false">
+                                       <graphic>
+                                          <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/supergreen.PNG" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                                 <padding>
+                                    <Insets left="60.0" right="10.0" />
+                                 </padding>
+                              </HBox>
+                           </content>
                         </ScrollPane>
                      </center>
                      <BorderPane.margin>
@@ -129,31 +147,31 @@
                      <center>
                         <ScrollPane prefHeight="125.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                            <content>
-                              <ButtonBar buttonMinWidth="50.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="88.0" prefWidth="600.0">
+                              <ButtonBar buttonMinWidth="60.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="88.0" prefWidth="600.0">
                                  <buttons>
                                     <Button contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@331website1/images/me.png" />
+                                                <Image url="@images/supergreen.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
                                     </Button>
                                     <Button contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@331website1/images/me.png" />
+                                                <Image url="@images/bpsteak.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
                                     </Button>
                                     <Button contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
-                                          <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                          <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@331website1/images/me.png" />
+                                                <Image url="@images/shrimp.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
