upgrade fxml w/ ids,  create controllers + app
only need to do cater thing i think

--- a/serverApp.fxml
+++ b/serverApp.fxml
@@ -13,20 +13,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="serverAppController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <BorderPane prefHeight="75.0" style="-fx-background-color: BB2719;">
                <center>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" textAlignment="CENTER" BorderPane.alignment="CENTER">
+                  <Text fx:id="Time" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" textAlignment="CENTER" BorderPane.alignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Text>
                </center>
                <left>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
+                  <Text fx:id="EmployeeID" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="10.0" />
                      </BorderPane.margin>
@@ -47,7 +47,7 @@
                <bottom>
                   <BorderPane maxHeight="1.7976931348623157E308" minHeight="75.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <left>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #e3130b;" text="CANCEL" textFill="WHITE" BorderPane.alignment="CENTER">
+                        <Button fx:id="CancelButton" mnemonicParsing="false" style="-fx-background-color: #e3130b;" text="CANCEL" textFill="WHITE" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets left="10.0" />
                            </BorderPane.margin>
@@ -57,7 +57,7 @@
                         </Button>
                      </left>
                      <right>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #68d955;" text="ADD TO ORDER" textFill="WHITE" BorderPane.alignment="CENTER">
+                        <Button fx:id="AddOrderButton" mnemonicParsing="false" style="-fx-background-color: #68d955;" text="ADD TO ORDER" textFill="WHITE" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets right="10.0" />
                            </BorderPane.margin>
@@ -67,7 +67,7 @@
                         </Button>
                      </right>
                      <center>
-                        <TextField BorderPane.alignment="CENTER">
+                        <TextField fx:id="AddNote" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets left="50.0" right="50.0" />
                            </BorderPane.margin>
@@ -90,7 +90,7 @@
                                  <content>
                                     <ButtonBar buttonMinWidth="100.0">
                                        <buttons>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="ChickenRoll" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -99,7 +99,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="VegRoll" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -108,7 +108,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="Rangoon" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
