--- a/serverDefault.fxml
+++ b/serverDefault.fxml
@@ -14,20 +14,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="serverDefaultController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <BorderPane prefHeight="75.0" style="-fx-background-color: BB2719;">
                <center>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" textAlignment="CENTER" BorderPane.alignment="CENTER">
+                  <Text fx:id="Time" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="TIME" textAlignment="CENTER" BorderPane.alignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Text>
                </center>
                <left>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
+                  <Text fx:id="EmployeeID" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEE ID" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
                         <Insets left="10.0" />
                      </BorderPane.margin>
@@ -58,7 +58,7 @@
                            <content>
                               <HBox alignment="CENTER" prefHeight="98.0" prefWidth="306.0">
                                  <children>
-                                    <Button mnemonicParsing="false">
+                                    <Button fx:id="White_Steamed_Rice" mnemonicParsing="false">
                                        <HBox.margin>
                                           <Insets right="30.0" />
                                        </HBox.margin>
@@ -70,7 +70,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button mnemonicParsing="false">
+                                    <Button fx:id="Fried_Rice" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -82,7 +82,7 @@
                                           <Insets right="30.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false">
+                                    <Button fx:id="Chow_Mein" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -94,7 +94,7 @@
                                           <Insets right="30.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false">
+                                    <Button fx:id="Super_Green" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -119,7 +119,7 @@
                <bottom>
                   <BorderPane maxHeight="1.7976931348623157E308" minHeight="75.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <left>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #e3130b;" text="CANCEL" textFill="WHITE" BorderPane.alignment="CENTER">
+                        <Button fx:id="CancelButton" mnemonicParsing="false" style="-fx-background-color: #e3130b;" text="CANCEL" textFill="WHITE" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets left="10.0" />
                            </BorderPane.margin>
@@ -129,7 +129,7 @@
                         </Button>
                      </left>
                      <right>
-                        <Button mnemonicParsing="false" style="-fx-background-color: #68d955;" text="ADD TO ORDER" textFill="WHITE" BorderPane.alignment="CENTER">
+                        <Button fx:id="AddOrderButton" mnemonicParsing="false" style="-fx-background-color: #68d955;" text="ADD TO ORDER" textFill="WHITE" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets right="10.0" />
                            </BorderPane.margin>
@@ -139,7 +139,7 @@
                         </Button>
                      </right>
                      <center>
-                        <TextField BorderPane.alignment="CENTER">
+                        <TextField fx:id="AddNote" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets left="50.0" right="50.0" />
                            </BorderPane.margin>
@@ -154,7 +154,7 @@
                            <content>
                               <ButtonBar nodeOrientation="LEFT_TO_RIGHT" prefHeight="88.0" prefWidth="600.0">
                                  <buttons>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Honey_Walnut_Shrimp" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -163,7 +163,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Beijing_Beef" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -172,7 +172,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Broccoli_Beef" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -181,7 +181,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Honey_Sesame_Chicken" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -190,7 +190,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Kung_Pao_Chicken" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -199,7 +199,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Black_Pepper_Chicken" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -208,7 +208,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Orange_Chicken" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -217,7 +217,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false" style="-fx-background-color: BB2719;">
+                                    <Button fx:id="Hot_Orange_Chicken" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-background-color: BB2719;">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -226,7 +226,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="String_Bean_Chicken_Breast" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -235,7 +235,7 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button contentDisplay="CENTER" mnemonicParsing="false">
+                                    <Button fx:id="Super_Green2" contentDisplay="CENTER" mnemonicParsing="false">
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
