--- a/serverDrink.fxml
+++ b/serverDrink.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D16D69;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="serverDrinkController">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -90,7 +90,7 @@
                                  <content>
                                     <HBox alignment="CENTER" prefHeight="100.0">
                                        <children>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="Sprite" mnemonicParsing="false">
                                              <HBox.margin>
                                                 <Insets right="20.0" />
                                              </HBox.margin>
@@ -102,7 +102,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="Coke" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -114,7 +114,7 @@
                                                 <Insets right="20.0" />
                                              </HBox.margin>
                                           </Button>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="DrPepper" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="90.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -126,7 +126,7 @@
                                                 <Insets right="20.0" />
                                              </HBox.margin>
                                           </Button>
-                                          <Button mnemonicParsing="false">
+                                          <Button fx:id="SweetTea" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="90.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -152,22 +152,50 @@
                                  <content>
                                     <HBox alignment="CENTER" prefHeight="100.0">
                                        <children>
-                                          <Button mnemonicParsing="false" text="Mango Guava">
+                                          <Button fx:id="MangoGuava" mnemonicParsing="false">
                                              <HBox.margin>
                                                 <Insets right="20.0" />
                                              </HBox.margin>
+                                             <graphic>
+                                                <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@images/mangoguavatea.PNG" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" text="Pomegranate Pineapple">
+                                          <Button fx:id="PomPin" mnemonicParsing="false">
                                              <HBox.margin>
                                                 <Insets right="20.0" />
                                              </HBox.margin>
+                                             <graphic>
+                                                <ImageView fitHeight="100.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@images/pomegranatepineapple.PNG" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" text="Watermelon Mango">
+                                          <Button fx:id="WatMan" mnemonicParsing="false">
                                              <HBox.margin>
                                                 <Insets right="20.0" />
                                              </HBox.margin>
+                                             <graphic>
+                                                <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@images/watermelonmango.PNG" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" text="Peach Lychee" />
+                                          <Button fx:id="PeachLychee" mnemonicParsing="false">
+                                             <graphic>
+                                                <ImageView fitHeight="150.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@images/peachlychee.PNG" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic></Button>
                                        </children>
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
