--- a/serverCheckout.fxml
+++ b/serverCheckout.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="checkoutController">
     <top>
         <AnchorPane fx:id="topBar" prefHeight="60.0" style="-fx-background-color: #BB2719;">
             <HBox fx:id="topHBox" alignment="CENTER" spacing="50">
@@ -32,43 +32,13 @@
          <children>
             <ScrollPane layoutX="27.0" layoutY="71.0" prefHeight="260.0" prefWidth="253.0">
                <content>
-                  <TextArea prefHeight="258.0" prefWidth="252.0" text="hello&#10;" />
+                  <TextArea fx:id="orderTextArea" prefHeight="258.0" prefWidth="252.0"/>
                </content>
             </ScrollPane>
-            <Button layoutX="74.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Cancel" textFill="RED" />
-            <Button layoutX="223.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Add Notes" />
-            <Button layoutX="326.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" text="Pay" textFill="#12c421" />
+            <Button fx:id="cancelButton" layoutX="74.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Cancel" textFill="RED" />
+            <Button fx:id="addNotesButton" layoutX="223.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Add Notes" />
+            <Button fx:id="payButton" layoutX="326.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" text="Pay" textFill="#12c421" />
          </children>
       </AnchorPane>
    </center>
-   <top>
-      <AnchorPane prefHeight="60.0" prefWidth="600.0" style="-fx-background-color: BB2719;" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="60.0" prefWidth="600.0" spacing="200.0">
-               <children>
-                  <Label prefHeight="60.0" prefWidth="90.0" text="Employee Name" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-                  <Label text="Time" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets top="5.0" />
-                     </HBox.margin></Label>
-                  <ImageView fitHeight="50.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/Panda.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </HBox>
-         </children>
-      </AnchorPane>
-   </top>
 </BorderPane>
