--- a/inventory-view.fxml
+++ b/inventory-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="DatabaseController"
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="InventoryController"
             prefWidth="800" prefHeight="600">
 
     <children>
@@ -24,23 +24,32 @@
         <TextField fx:id="quantityField" layoutX="350" layoutY="265" prefWidth="100" promptText="Qty"/>
         <Button text="Update Inventory" layoutX="460" layoutY="265" onAction="#handleRestock"/>
 
-        <Label text="Dish Prices" layoutX="30" layoutY="320" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+        <Label text="Rename Item:" layoutX="30" layoutY="300"/>
+        <ComboBox fx:id="renameItemSelect" layoutX="160" layoutY="295" prefWidth="180"/>
+        <TextField fx:id="newNameField" layoutX="350" layoutY="295" prefWidth="150" promptText="New name"/>
+        <Button text="Rename Item" layoutX="510" layoutY="295" onAction="#handleRenameItem"/>
 
-        <TableView fx:id="dishTableView" layoutX="30" layoutY="350" prefWidth="740" prefHeight="180">
+        <Label text="Dish Prices" layoutX="30" layoutY="340" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+
+        <TableView fx:id="dishTableView" layoutX="30" layoutY="370" prefWidth="740" prefHeight="150">
             <columns>
                 <TableColumn fx:id="dishNameColumn" text="Dish Name" prefWidth="400"/>
                 <TableColumn fx:id="dishPriceColumn" text="Price" prefWidth="200"/>
             </columns>
         </TableView>
 
-        <Label text="Update Dish Price:" layoutX="30" layoutY="550"/>
-        <ComboBox fx:id="priceItemSelect" layoutX="160" layoutY="545" prefWidth="180"/>
-        <TextField fx:id="priceField" layoutX="350" layoutY="545" prefWidth="100" promptText="Price"/>
-        <Button text="Update Price" layoutX="460" layoutY="545" onAction="#handlePriceUpdate"/>
+        <Label text="Update Dish Price:" layoutX="30" layoutY="530"/>
+        <ComboBox fx:id="priceItemSelect" layoutX="160" layoutY="525" prefWidth="180"/>
+        <TextField fx:id="priceField" layoutX="350" layoutY="525" prefWidth="100" promptText="Price"/>
+        <Button text="Update Price" layoutX="460" layoutY="525" onAction="#handlePriceUpdate"/>
+
+        <Label text="Rename Dish:" layoutX="30" layoutY="560"/>
+        <ComboBox fx:id="renameDishSelect" layoutX="160" layoutY="555" prefWidth="180"/>
+        <TextField fx:id="newDishNameField" layoutX="350" layoutY="555" prefWidth="150" promptText="New dish name"/>
+        <Button text="Rename Dish" layoutX="510" layoutY="555" onAction="#handleRenameDish"/>
 
         <Button fx:id="queryButton" text="Reload Inventory" layoutX="600" layoutY="265"/>
-        <Button fx:id="closeButton" text="Close" layoutX="700" layoutY="545"/>
-
+        <Button fx:id="closeButton" text="Close" layoutX="700" layoutY="525"/>
     </children>
 
     <padding>
