--- a/FXML/Inventory.fxml
+++ b/FXML/Inventory.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="DatabaseController"
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.DatabaseController"
             prefWidth="800" prefHeight="600">
 
     <children>
