--- a/FXML/Login.fxml
+++ b/FXML/Login.fxml
@@ -36,7 +36,7 @@
                <right>
                   <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@images/panda.png" />
+                        <Image url="@../images/panda.png" />
                      </image>
                   </ImageView>
                </right>
