--- a/FXML/ServerApp.fxml
+++ b/FXML/ServerApp.fxml
@@ -38,7 +38,7 @@
                <right>
                   <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@images/panda.png" />
+                        <Image url="@../images/panda.png" />
                      </image>
                   </ImageView>
                </right>
@@ -94,7 +94,7 @@
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
-                                                      <Image url="@images/chickenroll.PNG" />
+                                                      <Image url="@../images/chickenroll.PNG" />
                                                    </image>
                                                 </ImageView>
                                              </graphic>
@@ -103,7 +103,7 @@
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
-                                                      <Image url="@images/veggieroll.PNG" />
+                                                      <Image url="@../images/veggieroll.PNG" />
                                                    </image>
                                                 </ImageView>
                                              </graphic>
@@ -112,7 +112,7 @@
                                              <graphic>
                                                 <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
-                                                      <Image url="@images/rangoon.PNG" />
+                                                      <Image url="@../images/rangoon.PNG" />
                                                    </image>
                                                 </ImageView>
                                              </graphic>
