--- a/FXML/ServerDefault.fxml
+++ b/FXML/ServerDefault.fxml
@@ -39,7 +39,7 @@
                <right>
                   <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@images/panda.png" />
+                        <Image url="@../images/panda.png" />
                      </image>
                   </ImageView>
                </right>
@@ -65,7 +65,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/ricewhite.PNG" />
+                                                <Image url="@../images/ricewhite.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -74,7 +74,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/ricefried.PNG" />
+                                                <Image url="@../images/ricefried.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -86,7 +86,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/chowmein.PNG" />
+                                                <Image url="@../images/chowmein.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -98,7 +98,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/supergreen.PNG" />
+                                                <Image url="@../images/supergreen.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -158,7 +158,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/shrimp.PNG" />
+                                                <Image url="@../images/shrimp.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -167,7 +167,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/beijing.PNG" />
+                                                <Image url="@../images/beijing.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -176,7 +176,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/brocbeef.PNG" />
+                                                <Image url="@../images/brocbeef.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -185,7 +185,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/hschicken.PNG" />
+                                                <Image url="@../images/hschicken.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -194,7 +194,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/kungpao.PNG" />
+                                                <Image url="@../images/kungpao.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -203,7 +203,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/mushroomchicken.PNG" />
+                                                <Image url="@../images/mushroomchicken.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -212,7 +212,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/orangechick.PNG" />
+                                                <Image url="@../images/orangechick.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -221,7 +221,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/orangechick.PNG" />
+                                                <Image url="@../images/orangechick.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -230,7 +230,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/stringbean.PNG" />
+                                                <Image url="@../images/stringbean.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
@@ -239,7 +239,7 @@
                                        <graphic>
                                           <ImageView fitHeight="60.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@images/supergreen.PNG" />
+                                                <Image url="@../images/supergreen.PNG" />
                                              </image>
                                           </ImageView>
                                        </graphic>
