--- a/FXML/ServerOrder.fxml
+++ b/FXML/ServerOrder.fxml
@@ -25,7 +25,7 @@
                </font></Label>
                <ImageView fx:id="logoImage" fitHeight="50" preserveRatio="true">
                   <image>
-                     <Image url="@images/Panda.png" />
+                     <Image url="@../images/Panda.png" />
                   </image>
                </ImageView>
             </HBox>  
