Slight codebase refactoring and compilation fixes

--- a/FXML/ManagerEmployeeData.fxml
+++ b/FXML/ManagerEmployeeData.fxml
@@ -15,7 +15,7 @@
 <BorderPane prefHeight="400.0" prefWidth="600.0"
             xmlns="http://javafx.com/javafx/11"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.ManagerEmployeeDataController">
+            fx:controller="ManagerEmployeeDataController">
 
   <top>
     <HBox alignment="CENTER" prefHeight="50.0" style="-fx-background-color: #D16D69;">
